--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,16 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+body {
+	background: #141414;
+	color: #ffffff;
+}
 
+.movie-app > .row {
+	overflow-x: auto;
+  overflow-y: hidden; /*remove vertical scroll bar */ 
+	flex-wrap: nowrap;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -35,4 +44,31 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.image-container {
+	position: relative;
+	transition: transform 0.2s;
+  width: fit-content; /* removed extra space */
+}
+
+.image-container:hover {
+	cursor: pointer;
+	transform: scale(1.1);
+}
+
+.image-container:hover .overlay {
+	opacity: 1;
+}
+
+.overlay {
+	position: absolute;
+	background: rgba(0, 0, 0, 0.8);
+	width: 100%;
+	transition: 0.5s ease;
+	opacity: 0;
+	bottom: 0;
+	font-size: 20px;
+	padding: 20px;
+	text-align: center;
 }
